# Magabot-ROS-Package

./: .gitignore  README.md
src/com/: CMakeLists.txt  package.xml
src/com/src/: listener.cpp  talker.cpp
src/description/: CMakeLists.txt  model.config  package.xml
src/description/launch/: mag_gazebo.launch  rviz.launch  rvizConfig.rviz
src/description/urdf/: magabot.urdf
src/description/worlds/: mag.world
src/magabot/: CMakeLists.txt  CMakeLists.txt~  mag.launch~  package.xml  package.xml~  pi_control.launch~  solo_control.launch~
src/magabot/launch/: filter.launch  joy_control.launch  nav_control.launch  navs_control.launch  pi_control.launch  solo_control.launch
src/magabot/msg/: bateryState.msg~  motorClick.msg  motorSpeed.msg  motorSpeed.msg~
src/magabot/src/: Control.cpp  MotorControl.cpp~  MotorOdometry.cpp~  Odometry.cpp  converter.cpp~  converterIR.cpp~  converterUS.cpp~  speedControl.cpp~
src/slam_nav/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/slam_nav/src/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  move_base.launch~
src/static_nav/: CMakeLists.txt  package.xml  solo_control.launch~
src/static_nav/src/: global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base.launch  move_base.launch~
src/window_nav/: CMakeLists.txt  package.xml  package.xml~
src/window_nav/src/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base.launch  move_base.launch~  move_base_params.yaml  move_base_params.yaml~
src/xboxjoy/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/xboxjoy/launch/: xboxjoy.launch
src/xboxjoy/src/: launch.xml~  xboxjoy.launch~  xboxjoy_node.cpp  xboxjoy_node.cpp~
