<?xml version="1.0"?>
<package>
  <name>description</name>
  <version>0.0.0</version>
  <description>Magabot URDF description</description>
  
  <maintainer email="posse@todo.todo">posse</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
