<?xml version="1.0"?>
<package>
  <name>magabot</name>
  <version>1.0.0</version>
  <description>Magabot Integration with ROS</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  
  <build_depend>rosserial_arduino</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>tf</run_depend>
  <build_depend>tf</build_depend>
  
  <export></export>
</package>

